--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "socket.io": "^4.5.3"
   },
   "scripts": {
-    "server": "node index.js",
+    "server": "node index.js"
   },
   "name": "server",
   "version": "1.0.0",
